<resources>
    <string name="app_name">Kinos</string>
    <string name="action_settings">Settings</string>
    <string name="Alos">עלות השחר</string>
    <string name="Mincha_gedola">מנחה גדולה</string>
    <string name="Neitz">נץ החמה</string>
    <string name="SofZman">סוף זמן ק׳׳ש</string>
    <string name="Shkias_hachama">שקיעת החמה</string>
    <string name="tzeis">צאת הכוכבים</string>
    <string name="motzash_text">צאת שבת</string>
    <string name="chatzos_string">חצות</string>
    <string name="Ashkenazi_string">אשכנז</string>
    <string name="Sfardi_string">עדות המזרח</string>
    <string name="Stupid_string">ספרד</string>
    <string name="shmaMA">ס\'\'ז ק\'\'ש (מ\'\'א)</string>
    <string name="tzeisRT">צאת (ר\'\'ת)</string>
    <string name="fast_ends_string">גמר התענית</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="zmanCredit"><b>Credits\nZmanim</b> are calculated based on your best available location data. Thanks to Eliahu Herfeld of KosherJava.org for his Zmanim API.\n\n<b>Nusach Ashkenaz</b> is primarily based on the siddur אזור אליהו and partially on .סידור קורן\n\n<b>Nusach Sfard</b> is based primarily on סידור רינת ישראל.\n\n<b>Edot HaMizrach</b> is primarily based on סידור קורן.\n</string>
    <string name="refaeinu_long_sfardi1">\n<b>רְפָאֵנוּ</b> יְהֹוָה וְנֵרָפֵא, הוֹשִׁיעֵנוּ וְנִוָּשֵׁעָה, כִּי תְהִלָּתֵנוּ אָתָּה, וְהַעֲלֵה אֲרוּכָה וּמַרְפֵּא לְכָל תַּחֲלוּאֵינוּ וּלְכָל מַכְאוֹבֵינוּ וּלְכָל מַכּוֹתֵינוּ, יְהִי רָצוֹן מִלְּפָנֶיךָ יהוה אֱלֹהַי וֵאלֹהֵי אֲבוֹתַי שֶׁתִּשְׁלַח רְפוּאָה שְׁלֵמָה לַחוֹלה</string>
    <string name="refaeinu_long_sfardi2"> בְּתוֹךְ שְׁאָר חוֹלֵי יִשְׂרָאֵל, כִּי אֵל רוֹפֵא רַחֲמָן וְנֶאֱמָן אָתָּה. בָּרוּךְ אַתָּה יֹהֹוֹהֹ, רוֹפֵא חוֹלֵי עַמּוֹ יִשְׂרָאֵל:</string>
    <string name="rephaeinu_stupid_long1">\n<b>רְפָאֵנוּ</b> יהוה וְנֵרָפֵא, הוֹשִׁיעֵנוּ וְנִוָּשֵׁעָה, כִּי תְהִלָּתֵנוּ אָתָּה, וְהַעֲלֵה אֲרוּכָה וּמַרְפֵּא לְכָל תַּחֲלוּאֵינוּ וּלְכָל מַכְאוֹבֵינוּ וּלְכָל מַכּוֹתֵינוּ, רְפוּאָה שְׁלֵמָה לְכָל מַכּוֹתֵינוּ,\nיְהִי רָצוֹן מִלְּפָנֶיךָ יהוה אֱלֹהַי וֵאלֹהֵי אֲבוֹתַי. שֶׁתִּשְׁלַח מְהֵרָה רְפוּאָה שְׁלֵמָה מִן הַשָּׁמַיִם. רְפוּאַת הַנֶּפֶשׁ וּרְפוּאַת הַגּוּף לְחוֹלֶה </string>
    <string name="rephaeinu_stupid_long2">בְּתוֹךְ שְׁאָר חוֹלֵי יִשְׂרָאֵל:  כִּי אֵל רוֹפֵא נֶאֱמָן וְרַחֲמָן אָתָּה. בָּרוּךְ אַתָּה יהוה, רוֹפֵא חוֹלֵי עַמּוֹ יִשְׂרָאֵל:\n\n</string>
    <string name="ploni">פלוני בן פלונית</string>
    <string name="vayachel"><b>וַיְחַל מֹשֶׁה</b> אֶת פְּנֵי יהוה אֱלֹהָיו וַיֹּאמֶר לָמָה יהוה יֶחֱרֶה אַפְּךָ בְּעַמֶּךָ אֲשֶׁר הוֹצֵאתָ מֵאֶרֶץ מִצְרַיִם בְּכֹחַ גָּדוֹל וּבְיָד חֲזָקָה: לָמָּה יֹאמְרוּ מִצְרַיִם לֵאמֹר בְּרָעָה הוֹצִיאָם לַהֲרֹג אֹתָם בֶּהָרִים וּלְכַלֹּתָם מֵעַל פְּנֵי הָאֲדָמָה <b>שׁוּב מֵחֲרוֹן אַפֶּךָ וְהִנָּחֵם עַל הָרָעָה לְעַמֶּךָ:</b> זְכֹר לְאַבְרָהָם לְיִצְחָק וּלְיִשְׂרָאֵל עֲבָדֶיךָ אֲשֶׁר נִשְׁבַּעְתָּ לָהֶם בָּךְ וַתְּדַבֵּר אֲלֵהֶם אַרְבֶּה אֶת זַרְעֲכֶם כְּכוֹכְבֵי הַשָּׁמָיִם וְכָל הָאָרֶץ הַזֹּאת אֲשֶׁר אָמַרְתִּי אֶתֵּן לְזַרְעֲכֶם וְנָחֲלוּ לְעֹלָם: וַיִּנָּחֶם יהוה עַל הָרָעָה אֲשֶׁר דִּבֶּר לַעֲשׂוֹת לְעַמּוֹ:\n<b>שני</b>  וַיֹּאמֶר יהוה אֶל מֹשֶׁה פְּסָל לְךָ שְׁנֵי לֻחֹת אֲבָנִים כָּרִאשֹׁנִים וְכָתַבְתִּי עַל הַלֻּחֹת אֶת הַדְּבָרִים אֲשֶׁר הָיוּ עַל הַלֻּחֹת הָרִאשֹׁנִים אֲשֶׁר שִׁבַּרְתָּ: וֶהְיֵה נָכוֹן לַבֹּקֶר וְעָלִיתָ בַבֹּקֶר אֶל הַר סִינַי וְנִצַּבְתָּ לִי שָׁם עַל רֹאשׁ הָהָר: וְאִישׁ לֹא יַעֲלֶה עִמָּךְ וְגַם אִישׁ אַל יֵרָא בְּכָל הָהָר גַּם הַצֹּאן וְהַבָּקָר אַל יִרְעוּ אֶל מוּל הָהָר הַהוּא:\n<b> שלישי</b>-  וַיִּפְסֹל שְׁנֵי לֻחֹת אֲבָנִים כָּרִאשֹׁנִים וַיַּשְׁכֵּם מֹשֶׁה בַבֹּקֶר וַיַּעַל אֶל הַר סִינַי כַּאֲשֶׁר צִוָּה יהוה אֹתוֹ וַיִּקַּח בְּיָדוֹ שְׁנֵי לֻחֹת אֲבָנִים: וַיֵּרֶד יהוה בֶּעָנָן וַיִּתְיַצֵּב עִמּוֹ שָׁם וַיִּקְרָא בְשֵׁם יהוה: וַיַּעֲבֹר יהוה עַל פָּנָיו וַיִּקְרָא<b> יהוה יהוה אֵל רַחוּם וְחַנּוּן אֶרֶךְ אַפַּיִם וְרַב חֶסֶד וֶאֱמֶת: נֹצֵר חֶסֶד לָאֲלָפִים נֹשֵׂא עָוֹן וָפֶשַׁע וְחַטָּאָה וְנַקֵּה</b> לֹא יְנַקֶּה פֹּקֵד עֲוֹן אָבוֹת עַל בָּנִים וְעַל בְּנֵי בָנִים עַל שִׁלֵּשִׁים וְעַל רִבֵּעִים: וַיְמַהֵר מֹשֶׁה וַיִּקֹּד אַרְצָה וַיִּשְׁתָּחוּ: וַיֹּאמֶר אִם נָא מָצָאתִי חֵן בְּעֵינֶיךָ אֲדֹנָי יֵלֶךְ נָא אֲדֹנָי בְּקִרְבֵּנוּ כִּי עַם קְשֵׁה עֹרֶף הוּא <b>וְסָלַחְתָּ לַעֲוֹנֵנוּ וּלְחַטָּאתֵנוּ וּנְחַלְתָּנוּ:</b>\n\n</string>
    <string name="mincha_kria_2"><b>וְזאת הַתּוֹרָה אֲשֶׁר שם מֹשֶׁה לִפְנֵי בְּנֵי יִשְׂרָאֵל: עַל פִּי יהוה בְּיַד מֹשֶׁה:</b>\n\n\n<b>בָּרוּךְ אַתָּה יהוה</b> אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם אֲשֶׁר בָּחַר בִּנְבִיאִים טוֹבִים וְרָצָה בְּדִבְרֵיהֶם הַנֶּאֱמָרִים בֶּאֱמֶת:  בָּרוּךְ אַתָּה יהוה הַבּוֹחֵר בַּתוֹרָה וּבְמֹשֶׁה עַבְדּוֹ וּבְיִשְׂרָאֵל עַמּוֹ וּבִנְבִיאֵי הָאֱמֶת וְהַצֶּדֶק:\n\n\n<b>דִּרְשׁוּ</b> יהוה בְּהִמָּצְאוֹ קְרָאֻהוּ בִּהְיוֹתוֹ קָרוֹב: יַעֲזֹב רָשָׁע דַּרְכּוֹ וְאִישׁ אָוֶן מַחְשְׁבֹתָיו וְיָשֹׁב אֶל יהוה וִירַחֲמֵהוּ וְאֶל אֱלֹהֵינוּ כִּי יַרְבֶּה לִסְלוֹחַ: כִּי לֹא מַחְשְׁבוֹתַי מַחְשְׁבוֹתֵיכֶם וְלֹא דַרְכֵיכֶם דְּרָכָי נְאֻם יהוה: כִּי גָבְהוּ שָׁמַיִם מֵאָרֶץ כֵּן גָּבְהוּ דְרָכַי מִדַּרְכֵיכֶם וּמַחְשְׁבֹתַי מִמַּחְשְׁבֹתֵיכֶם: כִּי כַּאֲשֶׁר יֵרֵד הַגֶּשֶׁם וְהַשֶּׁלֶג מִן הַשָּׁמַיִם וְשָׁמָּה לֹא יָשׁוּב כִּי אִם הִרְוָה אֶת הָאָרֶץ וְהוֹלִידָהּ וְהִצְמִיחָהּ וְנָתַן זֶרַע לַזֹּרֵעַ וְלֶחֶם לָאֹכֵל: כֵּן יִהְיֶה דְבָרִי אֲשֶׁר יֵצֵא מִפִּי לֹא יָשׁוּב אֵלַי רֵיקָם כִּי אִם עָשָׂה אֶת אֲשֶׁר חָפַצְתִּי וְהִצְלִיחַ אֲשֶׁר שְׁלַחְתִּיו: כִּי בְשִׂמְחָה תֵצֵאוּ וּבְשָׁלוֹם תּוּבָלוּן הֶהָרִים וְהַגְּבָעוֹת יִפְצְחוּ לִפְנֵיכֶם רִנָּה וְכָל עֲצֵי הַשָּׂדֶה יִמְחֲאוּ כָף: תַּחַת הַנַּעֲצוּץ יַעֲלֶה בְרוֹשׁ (תחת) וְתַחַת הַסִּרְפַּד יַעֲלֶה הֲדַס וְהָיָה לַיהֹוָה לְשֵׁם לְאוֹת עוֹלָם לֹא יִכָּרֵת: כֹּה אָמַר יהוה שִׁמְרוּ מִשְׁפָּט וַעֲשׂוּ צְדָקָה כִּי קְרוֹבָה יְשׁוּעָתִי לָבוֹא וְצִדְקָתִי לְהִגָּלוֹת: אַשְׁרֵי אֱנוֹשׁ יַעֲשֶׂה זֹּאת וּבֶן אָדָם יַחֲזִיק בָּהּ שֹׁמֵר שַׁבָּת מֵחַלְּלוֹ וְשֹׁמֵר יָדוֹ מֵעֲשׂוֹת כָּל רָע: וְאַל יֹאמַר בֶּן הַנֵּכָר הַנִּלְוָה אֶל יהוה לֵאמֹר הַבְדֵּל יַבְדִּילַנִי יהוה מֵעַל עַמּוֹ וְאַל יֹאמַר הַסָּרִיס הֵן אֲנִי עֵץ יָבֵשׁ: כִּי כֹה אָמַר יהוה לַסָּרִיסִים אֲשֶׁר יִשְׁמְרוּ אֶת שַׁבְּתוֹתַי וּבָחֲרוּ בַּאֲשֶׁר חָפָצְתִּי וּמַחֲזִיקִים בִּבְרִיתִי: וְנָתַתִּי לָהֶם בְּבֵיתִי וּבְחוֹמֹתַי יָד וָשֵׁם טוֹב מִבָּנִים וּמִבָּנוֹת שֵׁם עוֹלָם אֶתֶּן לוֹ אֲשֶׁר לֹא יִכָּרֵת: וּבְנֵי הַנֵּכָר הַנִּלְוִים עַל יהוה לְשָׁרְתוֹ וּלְאַהֲבָה אֶת שֵׁם יהוה לִהְיוֹת לוֹ לַעֲבָדִים כָּל שֹׁמֵר שַׁבָּת מֵחַלְּלוֹ וּמַחֲזִיקִים בִּבְרִיתִי: וַהֲבִיאוֹתִים אֶל הַר קָדְשִׁי וְשִׂמַּחְתִּים בְּבֵית תְּפִלָּתִי עוֹלֹתֵיהֶם וְזִבְחֵיהֶם לְרָצוֹן עַל מִזְבְּחִי כִּי בֵיתִי בֵּית תְּפִלָּה יִקָּרֵא לְכָל הָעַמִּים: נְאֻם אֲדֹנָי יֱהֹוִה מְקַבֵּץ נִדְחֵי יִשְׂרָאֵל עוֹד אֲקַבֵּץ עָלָיו לְנִקְבָּצָיו:\n\n\n<b>בָּרוּךְ אַתָּה יהוה</b> אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם. צוּר כָּל הָעוֹלָמִים. צַדִּיק בְּכָל הַדּוֹרות. הָאֵל הַנֶּאֱמָן הָאוֹמֵר וְעושה. הַמְדַבֵּר וּמְקַיֵּם שֶׁכָּל דְּבָרָיו אֱמֶת וָצֶדֶק:\nנֶאֱמָן אַתָּה הוּא יהוה אֱלֹהֵינוּ וְנֶאֱמָנִים דְּבָרֶיךָ. וְדָבָר אֶחָד מִדְּבָרֶיךָ אָחור לא יָשׁוּב רֵיקָם. כִּי אֵל מֶלֶךְ נֶאֱמָן וְרַחֲמָן אָתָּה: <b>בָּרוּךְ אַתָּה יהוה</b>. הָאֵל הַנֶּאֱמָן בְּכָל דְּבָרָיו:\n\n\n<b>רַחֵם</b> עַל צִיּוֹן כִּי הִיא בֵּית חַיֵּינוּ. וְלַעֲלוּבַת נֶפֶשׁ תּושִׁיעַ בִּמְהֵרָה בְיָמֵינוּ:\n<b>בָּרוּךְ אַתָּה יהוה</b>. מְשמֵּחַ צִיּוֹן בְּבָנֶיהָ:\n\n\n<b>שמְּחֵנוּ</b> יהוה אֱלֹהֵינוּ בְּאֵלִיָּהוּ הַנָּבִיא עַבְדֶּךָ וּבְמַלְכוּת בֵּית דָּוִד מְשִׁיחֶךָ. בִּמְהֵרָה יָבוא וְיָגֵל לִבֵּנוּ. עַל כִּסְאו לא יֵשֵׁב זָר וְלֹא יִנְחֲלוּ עוד אֲחֵרִים אֶת כְּבוֹדוֹ. כִּי בְשֵׁם קָדְשְׁךָ נִשְׁבַּעְתָּ לו שֶׁלֹּא יִכְבֶּה נֵרו לְעוֹלָם וָעֶד: <b>בָּרוּךְ אַתָּה יהוה</b>. מָגֵן דָּוִד:\n\n\n<b>יְהַלְלוּ</b> אֶת שֵׁם  יהוה. כִּי נִשְׂגָּב שְׁמוֹ לְבַדּוֹ:\nהוֹדוֹ עַל אֶרֶץ וְשָׁמָיִם: וַיָּרֶם קֶרֶן לְעַמּוֹ. תְּהִלָּה לְכָל חֲסִידָיו. לִבְנֵי יִשְׂרָאֵל עַם קְרוֹבוֹ. הַלְלוּיָהּ:\n\n\nלְדָוִד מִזְמוֹר. ל יהוה הָאָרֶץ וּמְלואָהּ. תֵּבֵל וְישְׁבֵי בָהּ: כִּי הוּא עַל יַמִּים יְסָדָהּ. וְעַל נְהָרות יְכונְנֶהָ: מִי יַעֲלֶה בְהַר  יהוה. וּמִי יָקוּם בִּמְקום קָדְשׁוֹ: נְקִי כַפַּיִם וּבַר לֵבָב. אֲשֶׁר לא נָשא לַשָּׁוְא נַפְשִׁי וְלֹא נִשְׁבַּע לְמִרְמָה: יִשָּׂא בְרָכָה מֵאֵת  יהוה. וּצְדָקָה מֵאֱלֹהֵי יִשְׁעו: זֶה דּוֹר דּרְשָׁיו. מְבַקְשֵׁי פָנֶיךָ יַעֲקֹב סֶלָה: שְׂאוּ שְׁעָרִים רָאשֵׁיכֶם וְהִנָּשְׂאוּ פִּתְחֵי עוֹלָם. וְיָבוֹא מֶלֶךְ הַכָּבוֹד: מִי זֶה מֶלֶךְ הַכָּבוֹד.  יהוה עִזּוּז וְגִבּוֹר.  יהוה גִּבּוֹר מִלְחָמָה: שְׂאוּ שְׁעָרִים רָאשֵׁיכֶם וּשְׂאוּ פִּתְחֵי עוֹלָם. וְיָבֹא מֶלֶךְ הַכָּבוֹד: מִי הוּא זֶה מֶלֶךְ הַכָּבוֹד.  יהוה צְבָאוֹת הוּא מֶלֶךְ הַכָּבוֹד סֶלָה:\n\n\n<b>וּבְנֻחה יֹאמַר</b> שׁוּבָה  יהוה רִבְבות אַלְפֵי יִשְׂרָאֵל: קוּמָה  יהוה לִמְנוּחָתֶךָ. אַתָּה וַאֲרון עֻזֶּךָ: כּהֲנֶיךָ יִלְבְּשׁוּ צֶדֶק. וַחֲסִידֶיךָ יְרַנֵּנוּ: בַּעֲבוּר דָּוִד עַבְדֶּךָ אַל תָּשֵׁב פְּנֵי מְשִׁיחֶךָ: כִּי לֶקַח טוב נָתַתִּי לָכֶם. תּוֹרָתִי אַל תַּעֲזבוּ: עֵץ חַיִּים הִיא לַמַּחֲזִיקִים בָּהּ. וְתמְכֶיהָ מְאֻשָּׁר: דְּרָכֶיהָ דַרְכֵי נעַם וְכָל נְתִיבותֶיהָ שָׁלוֹם: הֲשִׁיבֵנוּ  יהוה אֵלֶיךָ וְנָשׁוּבָה. חַדֵּשׁ יָמֵינוּ כְּקֶדֶם:\n\n\n</string>
    <string name="return_torah">\n\n\n<b>חזרת ספר תורה</b>\n\n\n<b>יְהַלְלוּ</b> אֶת שֵׁם יהוה. כִּי נִשְׂגָּב שְׁמוֹ לְבַדּוֹ:\nהוֹדוֹ עַל אֶרֶץ וְשָׁמָיִם: וַיָּרֶם קֶרֶן לְעַמּוֹ. תְּהִלָּה לְכָל חֲסִידָיו. לִבְנֵי יִשְׂרָאֵל עַם קְרוֹבוֹ. הַלְלוּיָהּ:\n\n<b>לְדָוִד מִזְמוֹר.</b> לַיהוה הָאָרֶץ וּמְלוֹאָהּ. תֵּבֵל וְיֹשְׁבֵי בָהּ: כִּי הוּא עַל יַמִּים יְסָדָהּ. וְעַל נְהָרוֹת יְכוֹנְנֶהָ: מִי יַעֲלֶה בְהַר יהוה. וּמִי יָקוּם בִּמְקוֹם קָדְשׁוֹ: נְקִי כַפַּיִם וּבַר לֵבָב. אֲשֶׁר לֹא נָשָׂא לַשָּׁוְא נַפְשִׁי וְלֹא נִשְׁבַּע לְמִרְמָה: יִשָּׂא בְרָכָה מֵאֵת יהוה. וּצְדָקָה מֵאֱלֹהֵי יִשְׁעוֹ: זֶה דּוֹר דֹּרְשָׁיו. מְבַקְשֵׁי פָנֶיךָ יַעֲקֹב סֶלָה: שְׂאוּ שְׁעָרִים רָאשֵׁיכֶם וְהִנָּשְׂאוּ פִּתְחֵי עוֹלָם. וְיָבוֹא מֶלֶךְ הַכָּבוֹד: מִי זֶה מֶלֶךְ הַכָּבוֹד. יהוה עִזּוּז וְגִבּוֹר. יהוה גִּבּוֹר מִלְחָמָה: שְׂאוּ שְׁעָרִים רָאשֵׁיכֶם וּשְׂאוּ פִּתְחֵי עוֹלָם. וְיָבֹא מֶלֶךְ הַכָּבוֹד: מִי הוּא זֶה מֶלֶךְ הַכָּבוֹד. יהוה צְבָאוֹת הוּא מֶלֶךְ הַכָּבוֹד סֶלָה:\n\n\n<b>וּבְנֻחה יֹאמַר</b> שׁוּבָה יהוה רִבְבוֹת אַלְפֵי יִשְׂרָאֵל: קוּמָה יהוה לִמְנוּחָתֶךָ. אַתָּה וַאֲרוֹן עֻזֶּךָ: כּהֲנֶיךָ יִלְבְּשׁוּ צֶדֶק. וַחֲסִידֶיךָ יְרַנֵּנוּ: בַּעֲבוּר דָּוִד עַבְדֶּךָ אַל תָּשֵׁב פְּנֵי מְשִׁיחֶךָ: כִּי לֶקַח טוֹב נָתַתִּי לָכֶם. תּוֹרָתִי אַל תַּעֲזבוּ: עֵץ חַיִּים הִיא לַמַּחֲזִיקִים בָּהּ. וְתֹמְכֶיהָ מְאֻשָּׁר: דְּרָכֶיהָ דַרְכֵי נֹעַם וְכָל נְתִיבוֹתֶיהָ שָׁלוֹם: הֲשִׁיבֵנוּ יהוה אֵלֶיךָ וְנָשׁוּבָה. חַדֵּשׁ יָמֵינוּ כְּקֶדֶם:\n</string>
     <string name="Gra">גר\'\'א</string>
    <string name="Mga">מג\'\'א</string>
    <string name="alos">עלות</string>
    <string name="mishyakir">משיכיר</string>
    <string name="rabeinuTom">ר\'\'ת</string>
    <string name="tzeisShort">צאת</string>
</resources>